[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/storeProduct.tscn" type="PackedScene" id=1]
[ext_resource path="res://Image-assets/close_button.png" type="Texture" id=2]
[ext_resource path="res://Image-assets/title grey-no-text.png" type="Texture" id=3]
[ext_resource path="res://Scripts/store.gd" type="Script" id=4]
[ext_resource path="res://Image-assets/shop-bkgr.png" type="Texture" id=5]
[ext_resource path="res://Image-assets/title blue-no-text.png" type="Texture" id=6]
[ext_resource path="res://Fonts/main_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scenes/supervisorPanel.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="Theme" id=3]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = null
VScrollBar/styles/grabber_highlight = null
VScrollBar/styles/grabber_pressed = null
VScrollBar/styles/scroll = SubResource( 2 )
VScrollBar/styles/scroll_focus = null

[node name="storeAvalonia" type="Panel"]
margin_left = 15.0
margin_top = 64.0
margin_right = 417.0
margin_bottom = 731.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ 172.301, 358.234 ],
"_edit_use_anchors_": false
}

[node name="shop-bkgr" type="Sprite" parent="."]
position = Vector2( 196.076, 380.301 )
scale = Vector2( 0.363292, 0.363292 )
texture = ExtResource( 5 )

[node name="close" type="TextureButton" parent="."]
margin_left = 349.433
margin_top = 96.296
margin_right = 396.433
margin_bottom = 138.296
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 51.0
margin_top = 190.0
margin_right = 344.0
margin_bottom = 608.0
theme = SubResource( 3 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_bottom = 105.0
custom_constants/separation = 105

[node name="breadControl" type="Control" parent="ScrollContainer/VBoxContainer"]

[node name="breadAvalonia" parent="ScrollContainer/VBoxContainer/breadControl" instance=ExtResource( 1 )]
margin_left = -2.044
margin_top = -3.2098
margin_right = -2.044
margin_bottom = -3.2098
targetProduct = "breadAvalonia"

[node name="productName" parent="ScrollContainer/VBoxContainer/breadControl/breadAvalonia" index="0"]
margin_left = 82.0973
margin_right = 170.467

[node name="cookieControl" type="Control" parent="ScrollContainer/VBoxContainer"]
margin_top = 105.0
margin_bottom = 105.0

[node name="cookieAvalonia" parent="ScrollContainer/VBoxContainer/cookieControl" instance=ExtResource( 1 )]
margin_left = -2.044
margin_top = -3.20981
margin_right = -2.044
margin_bottom = -3.20981
targetProduct = "cookieAvalonia"

[node name="supervisorPanel" parent="." instance=ExtResource( 9 )]
visible = false
margin_left = 14.0496
margin_top = 162.2
margin_right = 392.05
margin_bottom = 671.2

[node name="supervisorsBtn" type="TextureButton" parent="."]
margin_left = 195.669
margin_top = 140.772
margin_right = 382.669
margin_bottom = 184.772
rect_pivot_offset = Vector2( 238.656, -3.38788 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="supervisorLabel" type="Label" parent="supervisorsBtn"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.0
margin_top = -10.5
margin_right = 46.0
margin_bottom = 6.5
custom_fonts/font = ExtResource( 7 )
text = "SUPERVISORS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shopBtn" type="TextureButton" parent="."]
margin_left = 11.6688
margin_top = 140.772
margin_right = 198.669
margin_bottom = 184.772
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shopLabel" type="Label" parent="shopBtn"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -10.5
margin_right = 18.0
margin_bottom = 6.5
custom_fonts/font = ExtResource( 7 )
text = "SHOP"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="supervisorsBtn" to="." method="_on_supervisorsBtn_pressed"]
[connection signal="pressed" from="shopBtn" to="." method="_on_shopBtn_pressed"]

[editable path="ScrollContainer/VBoxContainer/breadControl/breadAvalonia"]

[editable path="supervisorPanel"]
